<resources>
    <string name="app_name">NYTimes Search</string>
    <string name="query_hint">Enter search query</string>
    <string name="action_settings">Settings</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search_activity_name">NY Times Articles</string>
    <string name="filter_activity_name">Filter Results By</string>
    <string name="filter_label_news_desk_values">News Desk Values</string>
    <string name="filter_checkbox_label_arts">Arts</string>
    <string name="filter_checkbox_label_fashion">Fashion &amp; Style</string>
    <string name="filter_checkbox_label_sports">Sports</string>
    <string name="filter_date_prompt">Click to select</string>
</resources>
