<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_filter"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fonda.nytimessearch.activities.FilterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/filter_label_width"
                android:layout_height="wrap_content"
                android:text="@string/begin_date"
                android:id="@+id/tvBeginDateLabel" />

            <EditText
                android:layout_width="@dimen/filter_control_width"
                android:paddingLeft="@dimen/filter_edittext_indent"
                android:textColor="@android:color/holo_blue_light"
                android:layout_height="@dimen/filter_control_height"
                android:textSize="@dimen/filter_custom_textsize"
                android:inputType="textPersonName"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                android:background="@drawable/edit_text_style"
                android:hint="@string/filter_date_prompt"
                android:id="@+id/etBeginDate" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/filter_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/sort_order"
                android:layout_width="@dimen/filter_label_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvSortOrder" />

            <Spinner
                android:layout_width="@dimen/filter_control_width"
                android:layout_height="wrap_content"
                android:entries="@array/sort_order"
                android:prompt="@string/sort_order"
                android:id="@+id/spSortOrder" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/filter_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/news_desk_values"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tvNewsDeskValues" />

            <LinearLayout
                android:orientation="vertical"
                android:weightSum="3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:text="@string/arts"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/filter_custom_textsize"
                    android:id="@+id/cbArts" />

                <CheckBox
                    android:text="@string/fashion_style"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/filter_custom_textsize"
                    android:id="@+id/cbFashion" />

                <CheckBox
                    android:text="@string/sports"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/filter_custom_textsize"
                    android:id="@+id/cbSports" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:text="@string/save"
            android:layout_marginTop="@dimen/filter_margin_top"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/saveButtonBackground"
            android:textColor="@android:color/white"
            android:id="@+id/btnSave"
            android:onClick="onSave" />
    </LinearLayout>
</RelativeLayout>
